plang/testing/logs/false-incorrect/182/program182.p.p
qcp nXXzA.


wj1o.


yObE l VoH.
dE5k (I) :- (kiHS (P8sa)).


efc Q.


r0rX (gMC5 (SPfr) C) (ieeU) (z540u (jg) jzA).

kI L (PpBQR) (r Ml) :- (wHl1x T).


jG b :- pwVD (IL6) (T6) (bBg (rjVL0 ZCo1G) x).


kRL.
bACJH (gx Z (ag09) fOzk) (h (Yh) (mQ) z5 bDH5i) (bDz ZoS (YxdfF) (aHQ (JMbg))).


zV :- (oMO tu9 M9 (crxhn (r TVe (P7) (s) (Xf)) (f8DsV WI9 (Q) (Vs)) emJq (WuWr))), b; h (G) (SQkM) (B4), o5 o4 nESWB Mrx; aGLw (s3QO (ZV) (Qbx5)) (V9) (SWlo) H8zSp; fd; (ljBLG (IHT)); a AAKX (qj (S) u82BG ZG2hS) b; iCL9O, (tfpR (T) (zD bDa4) (x6a J (k (L9)) (eEYTi (i aI (BzSM) (anZNs (bG) iF (Dc)))) (WkiUp))); (ePg0 kvuJ (OL4eg) (ztv (xa5 (hh Q qd nW2Y (wzhU E5 (frT Y (WTU1T) (HBd)) iBUj5 (RXuNk)))) yU) (IOfjm)); s; nf6 vf (MsLn1) SMf; (m5jvu (YR3) (RQ) (OoRTu)).

dr (J) o5i YTa.
alN (KM).
lPi (F) (sQd) QZ Rlovt.

u j.
hB (LnNGE) Q4B0.

a0v e6h (pKQ (O9)) J :- (yUYOA (zkW (rc (L5f)) (Bxi))), bS216 DqKqQ p; (eQA ZmS; (uy3DG)).

? ((uXHOk f BzL (H) (nVWGN (Lo4N9)); jmT1l IXv (qt38 qfC4X OWX); (s Nr6 (K) (q (a0dZv) (fJ3sQ tCvD iHvu (l fFsW1 Fj) J) VC4)); z09hd (wBiO4 (LW) (B) idDq) a hLio; pyU (F) (NjUc) (p4q GcX2j (rE (RK)) (Td)) QN; juQ mW1o (m (S2) (a4oY (C6o) (G) Zvqc0) ih0 eJlOX); ezne A fTqjr)).

